--- a/project/portfolio/templates/portfolio/home.html
+++ b/project/portfolio/templates/portfolio/home.html
@@ -6,7 +6,7 @@
     <span id="title_span">Nakajima Takumi's Portfolio</span>
 </h1>
 
-<div class="content is-medium">
+<div id=Plofile class="content is-medium">
     <h1>Plofile</h1>
     <table id="plofiletable" style="border:none" class="table is-hoverable">
         <tr class="plofiletable">
