--- a/project/portfolio/templates/portfolio/base.html
+++ b/project/portfolio/templates/portfolio/base.html
@@ -12,19 +12,19 @@
     </head>
 
     <body>
-        <nav class="navbar is-fixed-top">
+        <nav id="navbar" class="navbar is-fixed-top">
             <div class="navbar-brand">
                 
-                <a class="navbar-item" href="#title_span">
+                <a class="navbar-item" href="/#title_span">
                     Top
                 </a>
-                <a class="navbar-item" href="#Plofile">
+                <a class="navbar-item" href="/#Plofile">
                     Profile
                 </a>
-                <a class="navbar-item" href="#Works">
+                <a class="navbar-item" href="/#Works">
                     Works
                 </a>
-                <a class="navbar-item" href="#Contact">
+                <a class="navbar-item" href="/#Contact">
                     Contact
                 </a>
                 
