--- a/project/portfolio/templates/portfolio/home.html
+++ b/project/portfolio/templates/portfolio/home.html
@@ -40,7 +40,7 @@
         </div>
         <div class="card-content">
             <h6>使用言語など</h6>
-            <p>
+            <p class="tool_lists">
                 <ul class="tool_list">
                 {% for tool in work.related_tool.all %}
                 {% if tool.tool_class == "1" %}
