--- a/project/portfolio/templates/portfolio/home.html
+++ b/project/portfolio/templates/portfolio/home.html
@@ -15,7 +15,7 @@
         </tr>
         <tr class="plofiletable">
             <td>University</td>
-            <td>立正大学環境システム学科</td>
+            <td>立正大学地球環境科学部</td>
         </tr>
         <tr class="plofiletable">
             <td>Birthday</td>
