--- a/project/calculator/templates/calculator/base.html
+++ b/project/calculator/templates/calculator/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <html>
     <head>
         <meta charset="utf-8">
@@ -5,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+        <link rel="stylesheet" href="{% static 'css/calc.css' %}">
     </head>
     <body>
         {% block content %}
