--- a/project/calculator/templates/calculator/diversity_result.html
+++ b/project/calculator/templates/calculator/diversity_result.html
@@ -1,16 +1,38 @@
 {% extends 'calculator/base.html' %}
-{% load static %}
+{% load widget_tweaks %}
 {% block content %}
 
-<form method="POST" enctype="multipart/form-data" accept=".csv">{% csrf_token %}
-    {{form.as_p}}
-<button type="submit">Upload</button>
-</form>
+<section class="section">
+    <div class="container is-max-widescreen">
+        <div class="box">
+            <div class="content">
+                <h1 id="site_title" class="title has-text-weight-medium is-family-monospace">多様度指数計算機</h1>
+                <h6 id="result" class="has-text-weight-medium is-size-4">計算結果</h6>
+                <p id="H">多様度指数(H')：{{ H }}</p>
+                <img id="graph" src="{{graph}}" alt="">
+                <p class="is-size-5 pt-5">もう一度計算する</p>
+                <form method="POST" enctype="multipart/form-data" accept=".csv">{% csrf_token %}
+                    <div class="file">
+                        <label class="file-label">
+                            {% csrf_token %}
+                            {{ form.file|add_class:"file-input" }}
+                            <span class="file-cta">
+                                <span class="file-icon">
+                                    <i class="fas fa-upload"></i>
+                                </span>
+                                <span class="file-label">
+                                    ファイルを選択
+                                </span>
+                            </span>
+                        </label>
+                    </div>        
+                    <div class="control">
+                        <button class="button button is-outlined mt-3" type="submit">アップロード</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
 
-<p>
-    多様度指数(H')：{{H}}
-</p>
-<p>
-<img src="{{graph}}" alt="">
-</p>
 {% endblock %}
