--- a/project/calculator/templates/calculator/base.html
+++ b/project/calculator/templates/calculator/base.html
@@ -7,10 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-        <link rel="stylesheet" href="{% static 'css/calc.css' %}">
+        <link rel="stylesheet" href="{% static 'css/calculator/calc.css' %}">
     </head>
 
     <body>
+        <!-- ナビゲーションバー -->
         <nav class="navbar">
             <div class="navbar-brand">
                 <span id = nav_title>calculotor</span>
