--- a/project/portfolio/templates/portfolio/base.html
+++ b/project/portfolio/templates/portfolio/base.html
@@ -7,11 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-        <link rel="stylesheet" href="{% static 'css/portfolio.css' %}">
+        <link rel="stylesheet" href="{% static 'css/portfolio/portfolio.css' %}">
         
     </head>
 
     <body>
+        <!-- ナビゲーションバー -->
         <nav id="navbar" class="navbar is-fixed-top">
             <div class="navbar-brand">
                 
