--- a/project/portfolio/templates/portfolio/home.html
+++ b/project/portfolio/templates/portfolio/home.html
@@ -2,10 +2,12 @@
 {% load static %}
 {% block content %}
 
+<!-- タイトル -->
 <h1 id="site_title" class="title is-spaced has-text-weight-large">
     <span id="title_span">Nakajima Takumi's Portfolio</span>
 </h1>
 
+<!-- プロフィール -->
 <div id=Plofile class="content">
     <h1>Plofile</h1>
     <table id="plofiletable" style="border:none" class="table is-hoverable">
@@ -24,6 +26,7 @@
     </table>
 </div>
 
+<!-- 制作物一覧 -->
 <div id="Works" class="content">
     <h1>Works</h1>
     <div class="card_area">
@@ -69,6 +72,7 @@
     </div>
 </div>
 
+<!-- コンタクトリンク -->
 <div id="Contact" class="content">
     <h1>Contact</h1>
     <div id="contact_link">
