--- a/project/calculator/templates/calculator/home.html
+++ b/project/calculator/templates/calculator/home.html
@@ -5,7 +5,8 @@
 <section class="section">
     <div class="container is-max-widescreen">
         <div class="box">
-            <div class="content">        
+            <div class="content">
+              <!-- タイトル、説明 -->        
                 <h1 id="site_title" class="title is-spaced has-text-weight-medium is-family-monospace">多様度指数計算機</h1>
                 <p class="pl-1">csvファイルを読み込みShannon-Weaverの多様度指数H'を算出します。<br>対数の底は2で計算しています。<br>以下の形式のcsvファイルを読み込んでください。</p>
                     <table id="table" class="table is-bordered">
@@ -32,6 +33,8 @@
                           </tr>
                         </tbody>
                       </table>
+                      
+                <!-- csvのアップロードフォーム -->
                 <form method="POST" enctype="multipart/form-data" accept=".csv">{% csrf_token %}
                     <div class="file">
                         <label class="file-label">
