--- a/project/static/css/portfolio/portfolio.css
+++ b/project/static/css/portfolio/portfolio.css
@@ -9,7 +9,7 @@
         margin-top: 1.64em;
         padding-top: 1.2vmax;
         padding-left: 1.5vmax;
-        background-image: url("../images/basketflower.jpg");
+        background-image: url("../../images/basketflower.jpg");
         background-size: cover;
         background-position: left top;
         background-repeat: no-repeat;
