--- a/project/calculator/templates/calculator/home.html
+++ b/project/calculator/templates/calculator/home.html
@@ -13,23 +13,38 @@
                         <tbody>
                           <tr>
                             <th></th>
-                            <th>個体数</th>
+                            <th>地点ⅰ</th>
+                            <th>地点ⅱ</th>
+                            <th>...</th>
+                            <th>地点n</th>
                           </tr>
                           <tr>
-                            <td>種1</td>
-                            <td>x1</td>
+                            <th>種1</th>
+                            <td>(ⅰ, 1 )の個体数</td>
+                            <td>(ⅱ, 1 )の個体数</td>
+                            <td></td>
+                            <td>(n, 1 )の個体数</td>
                           </tr>
                           <tr>
-                            <td>種2</td>
-                            <td>x2</td>
+                            <th>種2</th>
+                            <td>(ⅰ, 2 )の個体数</td>
+                            <td>(ⅱ, 2 )の個体数</td>
+                            <td></td>
+                            <td>(n, 2 )の個体数</td>
                           </tr>
                           <tr>
-                            <td>...</td>
-                            <td>...</td>
+                            <th>...</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
                           </tr>
                           <tr>
-                            <td>種3</td>
-                            <td>x3</td>
+                            <th>種n</th>
+                            <td>(ⅰ, n )の個体数</td>
+                            <td>(ⅱ, n )の個体数</td>
+                            <td></td>
+                            <td>(n, n )の個体数</td>
                           </tr>
                         </tbody>
                       </table>
