--- a/project/calculator/templates/calculator/home.html
+++ b/project/calculator/templates/calculator/home.html
@@ -8,7 +8,7 @@
             <div class="content">
               <!-- タイトル、説明 -->        
                 <h1 id="site_title" class="title is-spaced has-text-weight-medium is-family-monospace">多様度指数計算機</h1>
-                <p class="pl-1">csvファイルを読み込みShannon-Weaverの多様度指数H'を算出します。<br>対数の底は2で計算しています。<br>以下の形式のcsvファイルを読み込んでください。</p>
+                <p class="pl-1">csvファイルを読み込みShannon-Weaverの多様度指数H'を算出します。<br>対数の底は2で計算しています。<br>以下の形式のcsvファイルを読み込んでください。<br></p>
                     <table id="table" class="table is-bordered">
                         <tbody>
                           <tr>
